# Amundsen

./: Makefile.am  README  README.md  alfabeta.c  alfabeta.h  amundsen.6x  bitboards.c  bitboards.h  chess.c  configure.ac  display.c  display.h  eval.c  eval.h  genmoves.c  genmoves.h  hash.c  hash.h  iterdeep.c  iterdeep.h  makemove.c  makemove.h  misc.c  misc.h  parse.c  parse.h  slump.c  slump.h  swap.c  swap.h  threads.c  threads.h  timectrl.c  timectrl.h  timeoday.c
debian_packages/: amundsen_0.65.1-1_i386.deb  amundsen_0.70-1_i386.deb  amundsen_0.75-1_i386.deb  amundsen_0.80-1_i386.deb
opening_book/: openings.bok
testsuites/: README  README.md  iq2.epd
